--- a/quick-start.html
+++ b/quick-start.html
@@ -26,7 +26,7 @@ padding: 15px 0;
 <div class="container">
   <div class="row">
     <div class="span12">
-      <img src="wwu.png" width="300" style="margin: 10px 0 20px 0">
+      <img src="wwu2.png" height="65" width="300" style="margin: 10px 0 20px 0">
     </div>
   </div>
 
