--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@ padding: 15px 0;
   <div class="row">
     <div class="span12">
       <h2>Documentation</h2>
-      <p>A simple <a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', Quick Start', 'Normal link']);">Quick Start</a> is available. Further instructions to compile and run the code are available in the <code>README.md</code> file of the tarball.
-      <p>The manual is available as <a href="http://arxiv.org/abs/1304.0790" target="_blank">arXiv:1304.0790</a>.
-      
+      <p>A simple <a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', Quick Start', 'Normal link']);">Quick Start</a> is available with minimal instructions to get Resummino working.
+      <p>There is also a more comprehensive <a href="http://docs.resummino.org/">User Guide</a> for usage reference.
+      <p>The physics manual is available as <a href="http://arxiv.org/abs/1304.0790" target="_blank">arXiv:1304.0790</a>.
+
       <h2>Download</h2>
       <p>The latest version is <b>1.0.2</b> (2013-05-16):</p>
       <ul>
