Change repo address davidlamprea -> resummino

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ padding: 15px 0;
   <div class="row">
     <div class="span12">
       <div class="well pull-right" style="text-align: center">
-        <p><a href="http://pauli.uni-muenster.de/~d_rega01/downloads/resummino/resummino-1.0.2.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino 1.0.2</a></p>
+        <p><a href="https://bitbucket.org/resummino/resummino/downloads/resummino-1.0.2.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino 1.0.2</a></p>
         Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
         <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
       </div>
@@ -62,7 +62,7 @@ padding: 15px 0;
       <h2>Download</h2>
       <p>The latest version is <b>1.0.2</b> (2013-05-16):</p>
       <ul>
-        <li><a onclick="_gaq.push(['_trackEvent', 'Download', 'Normal link']);" href="http://pauli.uni-muenster.de/~d_rega01/downloads/resummino/resummino-1.0.2.tar.bz2">resummino-1.0.2.tar.bz2</a> — Source code tarball</li>
+        <li><a onclick="_gaq.push(['_trackEvent', 'Download', 'Normal link']);" href="https://bitbucket.org/resummino/resummino/downloads/resummino-1.0.2.tar.bz2">resummino-1.0.2.tar.bz2</a> — Source code tarball</li>
       </ul>
       <p>All previous releases are available on the <a href="http://pauli.uni-muenster.de/~d_rega01/downloads/resummino/">download server</a> for reference.
       
@@ -79,7 +79,7 @@ padding: 15px 0;
         </ul>
 
       <h2>Contact</h2>
-      <p>New releases will be announced on the <a href="https://groups.google.com/d/forum/resummino-announce">mailing list</a>. If you find any bug or have any proposal, please use the <a href="http://code.davidlamprea.com/resummino/issues">issue tracker</a>. For anything else you can contact us at <b>resummino [at] uni-muenster.de</b>. Any feedback is appreciated.
+      <p>New releases will be announced on the <a href="https://groups.google.com/d/forum/resummino-announce">mailing list</a>. If you find any bug or have any proposal, please use the <a href="https://bitbucket.org/resummino/resummino/issues">issue tracker</a>. For anything else you can contact us at <b>resummino [at] uni-muenster.de</b>. Any feedback is appreciated.
       <p>The NLO Monte Carlo codes can be found on the <a href="http://www.montecarlino.org/">Monte Carlino</a> website.
     </div>
   </div>
