--- a/quick-start.html
+++ b/quick-start.html
@@ -57,7 +57,7 @@ $ sudo apt-get install boost boost-dev gsl gsl-dev
       <h2>2. Compilation and installation</h2>
       <p>You can issue the following commands in a terminal to download, compile and install Resummino:</p>
 <pre>
-$ wget http://pauli.uni-muenster.de/~d_rega01/downloads/resummino/resummino-1.0.2.tar.bz2
+$ wget https://bitbucket.org/resummino/resummino/downloads/resummino-1.0.2.tar.bz2
 $ tar xf resummino-1.0.2.tar.bz2
 $ cd resummino-1.0.2
 $ cmake . -DLHAPDF=/usr/local/lhapdf -DCMAKE_INSTALL_PREFIX=/usr/local/resummino
