Make tar extract command more explicit

--- a/quick-start.html
+++ b/quick-start.html
@@ -58,7 +58,7 @@ $ sudo apt-get install boost boost-dev gsl gsl-dev
       <p>You can issue the following commands in a terminal to download, compile and install Resummino:</p>
 <pre>
 $ wget https://bitbucket.org/resummino/resummino/downloads/resummino-1.0.2.tar.bz2
-$ tar xf resummino-1.0.2.tar.bz2
+$ tar -xvjf resummino-1.0.2.tar.bz2
 $ cd resummino-1.0.2
 $ cmake . -DLHAPDF=/usr/local/lhapdf -DCMAKE_INSTALL_PREFIX=/usr/local/resummino
 $ make
