--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ menu: "home"
 <div class="row">
   <div class="span12">
     <div class="well pull-right" style="text-align: center">
-      <p><a href="{{ site.tarball }}" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino {{ site.version }}</a></p>
+      <p><a href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino {{ site.version }}</a></p>
       Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
     </div>
@@ -27,10 +27,9 @@ menu: "home"
       <h2>Download</h2>
     <p>The latest version is <b>{{ site.version }}</b> ({{ site.date }}):</p>
     <ul>
-      <li><a onclick="_gaq.push(['_trackEvent', 'Download', 'Normal link']);" href="{{ site.tarball }}">resummino-{{ site.version }}.tar.bz2</a> — Source code tarball</li>
+      <li><a onclick="_gaq.push(['_trackEvent', 'Download', 'Normal link']);" href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2">resummino-{{ site.version }}.tar.bz2</a> — Source code tarball</li>
     </ul>
-    <p>All previous releases are available on the <a href="http://pauli.uni-muenster.de/~d_rega01/downloads/resummino/">download server</a> for reference.
-      
+    <p>All previous releases are available on the <a href="{{ site.server_url }}">download server</a> for reference.
       <h2>Publications</h2>
     <p>If using Resummino for slepton pair production, please cite:
       <ul>
