Remove unnecessary option to `tar` command
The `man` page of `tar` does not use the option to specify the format
explicitly.

--- a/quick-start.html
+++ b/quick-start.html
@@ -17,7 +17,7 @@ menu: "quick-start"
     <h2>2. Compilation and installation</h2>
     <p>You can issue the following commands in a terminal to download, compile and install Resummino:</p>
 <pre>$ wget {{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2
-$ tar -xvjf resummino-{{ site.version }}.tar.bz2
+$ tar -xvf resummino-{{ site.version }}.tar.bz2
 $ cd resummino-{{ site.version }}
 $ cmake . -DLHAPDF=/usr/local/lhapdf -DCMAKE_INSTALL_PREFIX=/usr/local/resummino
 $ make
