--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ menu: "home"
     <div class="well pull-right" style="text-align: center">
       <p><a href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino {{ site.version }}</a></p>
       Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
+      <a href="http://docs.resummino.org/" onclick="_gaq.push(['_trackEvent', 'User guide', 'Main button']);">User Guide</a> |
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
     </div>
     <h1>Resummino <small>Resummation for BSM particles</small></h1>
@@ -21,7 +22,7 @@ menu: "home"
   <div class="span12">
     <h2>Documentation</h2>
     <p>A simple <a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', Quick Start', 'Normal link']);">Quick Start</a> is available with minimal instructions to get Resummino working.
-    <p>There is also a more comprehensive <a href="http://docs.resummino.org/">User Guide</a> for usage reference.
+    <p>There is also a more comprehensive <a href="http://docs.resummino.org/" onclick="_gaq.push(['_trackEvent', 'User guide', 'Normal link']);">User Guide</a> for usage reference.
     <p>The physics manual is available as <a href="http://arxiv.org/abs/1304.0790" target="_blank">arXiv:1304.0790</a>.
 
       <h2>Download</h2>
