add some text and rm our names :D test

--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@ menu: "home"
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
     </div>
     <h1>Resummino <small>Resummation for BSM particles</small></h1>
-    <p>Resummino computes resummation predictions for Beyond the Standard Model (BSM) particle production at hadron colliders up to the NLO+NLL level. Currently the processes implemented include <b>gaugino</b>-pair production and <b>slepton</b>-pair production. It is able to compute total cross sections as well as invariant-mass and transverse-momentum distributions.</p>
-    <p>This is open-source software under the terms of the European Union Public Licence, version 1.1 or later, and is actively developed at Institut für Theoretische Physik, Universität Münster, Germany, by David Lamprea and Marcel Rothering at the Research Group of Prof. Dr. Michael Klasen.</p>
+    <p>Resummino computes resummation predictions for Beyond the Standard
+    Model (BSM) particle production at hadron colliders up to the NLO+NLL
+    level. Currently the processes implemented include <b>gaugino</b>-pair
+    production, <b>slepton</b>-pair and the associated <b>gaugino-gluino</b>
+    production. It is able to compute total cross sections as well as
+    invariant-mass and transverse-momentum distributions. The latter has not
+    been implemented for the associated production.</p>
+    <p>This is open-source software under the terms of the European Union
+    Public Licence, version 1.1 or later, and is actively developed at
+    Institut für Theoretische Physik, Universität Münster, Germany, the Research Group of Prof. Dr. Michael Klasen.</p>
   </div>
 </div>
 
@@ -41,6 +49,10 @@ menu: "home"
       <ul>
         <li>J. Debove, B. Fuks, and M. Klasen, Phys. Lett. B <b>688,</b> 208 (2010); Nucl. Phys. B <b>842,</b> 51 (2011); Nucl. Phys. B <b>849,</b> 64 (2011).
         <li>B. Fuks, M. Klasen, D. R. Lamprea, and M. Rothering, JHEP <b>1210,</b> 081 (2012); Eur. Phys. J. C <b>73</b>, 2480 (2013).
+      </ul>
+    <p>For associated gaugino-gluino production, please cite:
+      <ul>
+        <li>B. Fuks, M. Klasen, M. Rothering, JHEP 07:053, (2016); Eur. Phys. J. C <b>73</b>, 2480 (2013).
       </ul>
 
       <h2>Contact</h2>
