copy a button; check out whats happening :D

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@ menu: "home"
 <div class="row">
   <div class="span12">
     <div class="well pull-right" style="text-align: center">
-      <p><a href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino {{ site.version }}</a></p>
+      <p><a href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2"
+      onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);"
+      class="btn btn-large btn-primary">Download Resummino {{ site.version
+          }}</a></p>
+            <p><a href="{{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2" onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);" class="btn btn-large btn-primary">Download Resummino {{ site.version }}</a></p>
       Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
       <a href="http://docs.resummino.org/" onclick="_gaq.push(['_trackEvent', 'User guide', 'Main button']);">User Guide</a> |
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
