--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ menu: "home"
           }}</a></p>
             <p><a href="http://pauli.uni-muenster.de/~m_roth11/downloads/resummino/resummino-2.0.0.tar.bz2" onclick="_gaq.push(['_trackEvent',
                                              'Download', 'Main button']);"
-                  class="btn btn-large btn-primary">Download Resummino 2.0.0</a></p>
+                  class="btn btn-large btn-primary">Download Resummino
+                2.0.0</a></p>
+                        <p><a href="http://pauli.uni-muenster.de/~m_roth11/downloads/resummino/resummino-2.0.0-looptools.tar.bz2" onclick="_gaq.push(['_trackEvent',
+                                             'Download', 'Main button']);"
+                  class="btn btn-large btn-primary">Download Resummino
+                                             2.0.0<br>(includes LoopTools-2.13) <br></a></p>
       Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
       <a href="http://docs.resummino.org/" onclick="_gaq.push(['_trackEvent', 'User guide', 'Main button']);">User Guide</a> |
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
