not everything small:D

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ menu: "home"
                                                                                                                          'Download', 'Main button']);"
             class="btn btn-large btn-primary">Download Resummino
           2.0.0<br>(<small>includes
-          LoopTools-2.13<small>) <br></a></p>
+          LoopTools-2.13</small>) <br></a></p>
       <p><a href="http://pauli.uni-muenster.de/~m_roth11/downloads/resummino/resummino-1.0.8.tar.bz2"
             onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);"
             class="btn btn-large btn-primary">Download Resummino
