--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@ menu: "home"
     production, <b>slepton</b>-pair and the associated <b>gaugino-gluino</b>
     production. It is able to compute total cross sections as well as
     invariant-mass and transverse-momentum distributions. The latter has not
-    been implemented for the associated production.</p>
+      been implemented for the associated production.</p>
+    <p> The new version <b>Resummino 2.0.0</b> includes the associated
+    production of gauginos and gluinos at NLO+NLL and of gauginos and squarks
+    at LO accuracy. Furthermore, it can be used to compute ordinary (not
+    collinear improved) threshold
+    resummation at the NLO+NNLL accuracy level for slepton and gaugino pair
+    production. Note that this version uses LoopTools, instead of QCD-loops, for the
+    evaluation of the loop integrals which has to be installed and linked to
+    resummino (see <a href="/quick-start.html"
+    onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick
+    Start</a>). You can also try the version which already includes
+    LoopTools-2.13. If you are just interested in the production of slepton
+    and gaugino pairs and if you do not want to install LoopTools you can
+    still download the older version (Resummino 1.0.8).</p>
     <p>This is open-source software under the terms of the European Union
     Public Licence, version 1.1 or later, and is actively developed at
     Institut für Theoretische Physik, Universität Münster, Germany, the Research Group of Prof. Dr. Michael Klasen.</p>
