--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ menu: "home"
     production of gauginos and gluinos at NLO+NLL and of gauginos and squarks
     at LO accuracy. Furthermore, it can be used to compute ordinary (not
     collinear improved) threshold
-    resummation at the NLO+NNLL accuracy level for slepton and gaugino pair
+    resummation at the NLO+NNLL accuracy level for slepton- and gaugino-pair
     production. Note that this version uses LoopTools, instead of QCD-loops, for the
     evaluation of the loop integrals which has to be installed and linked to
     resummino (see <a href="/quick-start.html"
