--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ menu: "home"
     <p>The physics manual is available as <a href="http://arxiv.org/abs/1304.0790" target="_blank">arXiv:1304.0790</a>.
 
       <h2>Download</h2>
-    <p>The latest version is <b>2.0.0</b> ({{2016-11-30}}):</p>
+    <p>The latest version is <b>2.0.0</b> (2016-11-30):</p>
     <ul>
       <li><a onclick="_gaq.push(['_trackEvent', 'Download', 'Normal link']);" href="http://pauli.uni-muenster.de/~m_roth11/downloads/resummino/resummino-2.0.0.tar.bz2">resummino-2.0.0.tar.bz2</a> — Source code tarball</li>
     </ul>
