add some information

--- a/quick-start.html
+++ b/quick-start.html
@@ -8,12 +8,18 @@ menu: "quick-start"
   <div class="span12">
     <h1>Resummino Quick Start</h1>
     <h2>1. Prerequisites</h2>
-    <p>You will need some <a href="http://www.boost.org/" target="_blank">Boost</a> headers, the <a href="http://www.gnu.org/software/gsl" target="_blank">GNU Scientific Library</a> and the <a href="http://lhapdf.hepforge.org/" target="_blank">LHAPDF library</a>. The first two can be installed in RHEL/Scientific Linux or Fedora by using:</p>
+    <p>You will need some <a href="http://www.boost.org/"
+    target="_blank">Boost</a> headers,
+    the <a href="http://www.gnu.org/software/gsl" target="_blank">GNU
+    Scientific Library</a>, the <a href="http://lhapdf.hepforge.org/"
+    target="_blank">LHAPDF library</a> and for Resummino-2.0.0 the <a href="http://www.feynarts.de/looptools/"
+    target="_blank">LoopTools library</a>. The first two can be installed in RHEL/Scientific Linux or Fedora by using:</p>
 <pre>$ sudo yum install boost boost-devel gsl gsl-devel</pre>
     <p>In Debian/Ubuntu you can use a similar command for the same purpose:</p>
 <pre>$ sudo apt-get install libboost-dev libgsl0-dev</pre>
     <p>You will need to install the LHAPDF library by following the instructions at <a href="http://lhapdf.hepforge.org/install" target="_blank">the website</a>, if you have not done so yet. You should also write down the path where LHAPDF is installed to.</p>
-
+<p>For the compilation and installation of Resummino 2.0.0 follow the
+    instructions stated in the Readme file.</p>
     <h2>2. Compilation and installation</h2>
     <p>You can issue the following commands in a terminal to download, compile and install Resummino:</p>
 <pre>$ wget {{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2
