--- a/quick-start.html
+++ b/quick-start.html
@@ -12,7 +12,7 @@ menu: "quick-start"
     target="_blank">Boost</a> headers,
     the <a href="http://www.gnu.org/software/gsl" target="_blank">GNU
     Scientific Library</a>, the <a href="http://lhapdf.hepforge.org/"
-    target="_blank">LHAPDF library</a> and for Resummino-2.0.0 the <a href="http://www.feynarts.de/looptools/"
+    target="_blank">LHAPDF library</a> and for Resummino-2.0.0 also the <a href="http://www.feynarts.de/looptools/"
     target="_blank">LoopTools library</a>. The first two can be installed in RHEL/Scientific Linux or Fedora by using:</p>
 <pre>$ sudo yum install boost boost-devel gsl gsl-devel</pre>
     <p>In Debian/Ubuntu you can use a similar command for the same purpose:</p>
