add note about squark gaugino stuff

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ menu: "home"
     invariant-mass and transverse-momentum distributions. The latter has not
       been implemented for the associated production.</p>
     <p> The new version <b>Resummino 2.0.0</b> includes the associated
-    production of gauginos and gluinos at NLO+NLL and of gauginos and squarks
+    production of gauginos and gluinos at NLO+NLL and of gauginos and squarks (still in development)
     at LO accuracy. Furthermore, it can be used to compute ordinary (not
     collinear improved) threshold
     resummation at the NLO+NNLL accuracy level for slepton- and gaugino-pair
