--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@ menu: "home"
     at LO accuracy. Furthermore, it can be used to compute ordinary (not
     collinear improved) threshold
     resummation at the NLO+NNLL accuracy level for slepton- and gaugino-pair
-    production. Note that this version uses LoopTools, instead of QCD-loops, for the
+    production. Note that this version uses LoopTools (instead of QCD-loops) for the
     evaluation of the loop integrals which has to be installed and linked to
-    resummino (see <a href="/quick-start.html"
-    onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick
-    Start</a>). You can also try the version which already includes
+      resummino. Instructions can be found in the Readme file.
+      You can also try the version which already includes
     LoopTools-2.13. If you are just interested in the production of slepton
-    and gaugino pairs and if you do not want to install LoopTools you can
+    and gaugino pairs you can
     still download the older version (Resummino 1.0.8).</p>
     <p>This is open-source software under the terms of the European Union
     Public Licence, version 1.1 or later, and is actively developed at
