--- a/quick-start.html
+++ b/quick-start.html
@@ -18,8 +18,8 @@ menu: "quick-start"
     <p>In Debian/Ubuntu you can use a similar command for the same purpose:</p>
 <pre>$ sudo apt-get install libboost-dev libgsl0-dev</pre>
     <p>You will need to install the LHAPDF library by following the instructions at <a href="http://lhapdf.hepforge.org/install" target="_blank">the website</a>, if you have not done so yet. You should also write down the path where LHAPDF is installed to.</p>
-<p>For the compilation and installation of Resummino 2.0.0 follow the
-    instructions stated in the Readme file.</p>
+<p>For the compilation and installation of Resummino 2.0.0 follow the included
+  Readme file.</p>
     <h2>2. Compilation and installation</h2>
     <p>You can issue the following commands in a terminal to download, compile and install Resummino:</p>
 <pre>$ wget {{ site.tarball_url }}resummino-{{ site.version }}.tar.bz2
