--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ menu: "home"
     evaluation of the loop integrals which has to be installed and linked to
       resummino. Instructions can be found in the Readme file.
       You can also try the version which already includes
-    LoopTools-2.13. If you are just interested in the production of slepton
+    LoopTools-2.13. This LoopTools version has slightly been modified in order
+    to increase the speed. If you are just interested in the production of slepton
     and gaugino pairs you can
     still download the older version (Resummino 1.0.8).</p>
     <p>This is open-source software under the terms of the European Union
