add sth about gsl

--- a/quick-start.html
+++ b/quick-start.html
@@ -17,7 +17,11 @@ menu: "quick-start"
 <pre>$ sudo yum install boost boost-devel gsl gsl-devel</pre>
     <p>In Debian/Ubuntu you can use a similar command for the same purpose:</p>
 <pre>$ sudo apt-get install libboost-dev libgsl0-dev</pre>
-    <p>You will need to install the LHAPDF library by following the instructions at <a href="http://lhapdf.hepforge.org/install" target="_blank">the website</a>, if you have not done so yet. You should also write down the path where LHAPDF is installed to.</p>
+    <p>Note that Resummino currently does not work with the newest gsl
+    version. If you want to use Resummino you have to download an older
+      version and link it via
+      <pre>$-DCMAKE_PREFIX_PATH=path/to/libgsl</pre>.
+      You will need to install the LHAPDF library by following the instructions at <a href="http://lhapdf.hepforge.org/install" target="_blank">the website</a>, if you have not done so yet. You should also write down the path where LHAPDF is installed to.</p>
 <p>For the compilation and installation of Resummino 2.0.0 follow the included
   Readme file.</p>
     <h2>2. Compilation and installation</h2>
