--- a/quick-start.html
+++ b/quick-start.html
@@ -38,8 +38,8 @@ $ make install</pre>
     of <code>wget</code>. Note that Resummino currently does not work with the newest gsl
     version. If you want to use Resummino and observe any problem regarding
     gsl you have to download an older version and link it
-    via: <pre>$cmake ../ -DCMAKE_PREFIX_PATH=path/to/libgsl</pre> Also note that you do
-    not have to specify where resummino hsa to be installed. If you just do
+    via: <pre>$ cmake ../ -DCMAKE_PREFIX_PATH=path/to/libgsl</pre> Also note that you do
+    not have to specify where resummino has to be installed. If you just do
     make all necessary binary files should be contained in the build folder.</p>
 
     <h2>3. Usage</h2>
