Get Resummino 1.0.9 offline
The older Resummino is buggy unfortunately and gives inconsistent results with the newer version of Resummino.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@ menu: "home"
             class="btn btn-large btn-primary">Download Resummino
           2.0.1<br>(<small>includes
           LoopTools-2.13</small>) <br></a></p>
+<!--
       <p><a href="http://pauli.uni-muenster.de/~masunder/downloads/resummino/resummino-1.0.9.tar.bz2"
             onclick="_gaq.push(['_trackEvent', 'Download', 'Main button']);"
             class="btn btn-large btn-primary">Download Resummino
-          1.0.9</a></p>
+        1.0.9</a></p>
+-->
       Documentation:<br><a href="/quick-start.html" onclick="_gaq.push(['_trackEvent', 'Quick start', 'Main button']);">Quick Start</a> |
       <a href="http://docs.resummino.org/" onclick="_gaq.push(['_trackEvent', 'User guide', 'Main button']);">User Guide</a> |
       <a href="http://arxiv.org/abs/1304.0790" onclick="_gaq.push(['_trackEvent', 'Manual', 'Main button']);" target="_blank">Manual</a>
@@ -42,9 +44,9 @@ menu: "home"
       resummino. Instructions can be found in the Readme file.
       You can also try the version which already includes
     LoopTools-2.13. This LoopTools version has slightly been modified in order
-    to increase the speed. If you are just interested in the production of slepton
+    to increase the speed. <!--If you are just interested in the production of slepton
     and gaugino pairs you can
-    still download the older version (Resummino 1.0.9).</p>
+    still download the older version (Resummino 1.0.9).--></p>
     <p>This is open-source software under the terms of the European Union
     Public Licence, version 1.1 or later, and is actively developed at
     Institut für Theoretische Physik, Universität Münster, Germany, the Research Group of Prof. Dr. Michael Klasen.</p>
